--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,5 +55,11 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "files.associations": {
+    "__bit_reference": "cpp",
+    "__split_buffer": "cpp",
+    "string": "cpp",
+    "vector": "cpp"
+  }
 }
