--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
     "__bit_reference": "cpp",
     "__split_buffer": "cpp",
     "string": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "debug.h": "c",
+    "chunk.h": "c"
   }
 }
